Refactor swagger docs to use schemas from DTOs and Resources
