# modules/Auth/DTOs/LoginDTO.php
@@ -2,8 +2,16 @@
 
 namespace Modules\Auth\DTOs;
 
+use OpenApi\Attributes as OA;
 use WendellAdriel\ValidatedDTO\ValidatedDTO;
 
+#[OA\Schema(
+    schema: 'login-dto',
+    properties: [
+        new OA\Property(property: 'email', type: 'string'),
+        new OA\Property(property: 'password', type: 'string'),
+    ],
+)]
 class LoginDTO extends ValidatedDTO
 {
     public string $email;
